<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgMain">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="0dp"
            app:subtitleTextColor="@color/black"
            app:titleTextColor="@color/black"
            app:navigationIcon="@drawable/ic_menu_back"
            android:background="@color/colorPrimaryDark"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:background="@color/bgMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_layout_hash"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@color/bgMain"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="60dp">

                        <ImageView
                            android:padding="5dp"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/ic_menu_info" />

                        <TextView
                            android:textSize="16dp"
                            android:textColor="@color/black"
                            android:gravity="left|center_vertical|center_horizontal|center"
                            android:padding="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="@string/version_label" />
                    </LinearLayout>

                    <TextView
                        android:textSize="14dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:id="@+id/tvCurrentVersion"
                        android:padding="2dp"
                        android:layout_width="60dp"
                        android:layout_height="70dp"
                        android:text="V 1.2"
                        android:layout_alignParentRight="true"
                        android:textAlignment="center" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@color/bgMain"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:padding="5dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_menu_folder" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="0dp">

                        <TextView
                            android:textSize="16dp"
                            android:textColor="@color/black"
                            android:gravity="left|center_vertical|center_horizontal|center"
                            android:padding="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/storage" />

                        <TextView
                            android:id="@+id/tvSaveLocation"
                            android:textSize="12dp"
                            android:textColor="@color/black"
                            android:gravity="left|center_vertical|center_horizontal|center"
                            android:padding="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/storagelocation"
                            android:layout_weight="1"
                            app:fontFamily="@font/regular" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:padding="5dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_menu_moon_stars" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="60dp">

                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dark Mode" />

                    <TextView
                        android:textSize="12dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="if you want Dark Mode , just turn on the Switch"
                        android:alpha="0.8"
                        android:layout_weight="1"
                        app:fontFamily="@font/regular" />
                </LinearLayout>

                <Switch
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:id="@+id/switchDarkMode"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_alignParentEnd="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    app:tint="@color/black"
                    app:srcCompat="@drawable/ic_menu_settings" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="60dp">

                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tap Sound" />

                    <TextView
                        android:id="@+id/tvSound"
                        android:textSize="12dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Want a tap Sound , if you click on any button"
                        android:alpha="0.8"
                        android:layout_weight="1"
                        app:fontFamily="@font/regular" />
                </LinearLayout>

                <Switch
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:id="@+id/switchButtonSound"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_alignParentEnd="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:padding="5dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_menu_notify" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="60dp">

                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_notification" />

                    <TextView
                        android:id="@+id/tvNotificationTag"
                        android:textSize="12dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_notification"
                        android:layout_weight="1"
                        android:alpha="0.8"
                        app:fontFamily="@font/regular" />
                </LinearLayout>

                <Switch
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:id="@+id/switchButtonNotification"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_alignParentEnd="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_gravity="center"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <ImageView
                    android:padding="5dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_menu_moon_stars" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="60dp">

                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Animations" />

                    <TextView
                        android:textSize="12dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Disable for better perfomance."
                        android:layout_weight="1"
                        app:fontFamily="@font/regular" />
                </LinearLayout>

                <Switch
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:id="@+id/switch_button_animation"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/linearLayoutPolicyPrivacy"
                    android:background="@color/bgMain"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp">

                    <ImageView
                        android:padding="5dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_menu_privacy" />

                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="-1dp"
                        android:text="@string/policy_privacy" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
